--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "author": "Antti Mielonen",
   "license": "ISC",
