--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   },
+  "engines": {
+    "node": "15.12.0"
+  },
   "author": "Antti Mielonen",
   "license": "ISC",
   "devDependencies": {
